--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <footer>
       <a class="resource" target='_blank' href="https://gist.github.com/barrycumbie/de4aa0fcb0cad79a870305240d726cd0">Visit our Resource Page</a>
       <a class="Linkdin-group" target='_blank' href="https://www.linkedin.com/groups/12058862/">Join Our linkedin group by clicking here</a>
-      <a class="validity" target='_blank' href="https://codepen.io/amannawaria12">Check this page Validity</a>
+      <a class="validity" target='_blank' href="https://validator.w3.org/nu/?doc=https%3A%2F%2Famannawaria12.github.io%2Ffoxtrot%2F">Check this page Validity</a>
       <p>©Aman Nawaria</p>
     </footer>
   </main>
